--- a/src/main/resources/org/example/jobportal/hello-view.fxml
+++ b/src/main/resources/org/example/jobportal/hello-view.fxml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<VBox alignment="CENTER" spacing="15.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.example.jobportal.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label text="Welcome to Job Portal!" style="-fx-font-size: 18px; -fx-text-fill: #2a2a2a;"/>
+
+    <TextField fx:id="usernameField" promptText="Username"/>
+    <PasswordField fx:id="passwordField" promptText="Password"/>
+
+    <Button text="Login" onAction="#onLoginButtonClick" style="-fx-background-color: #4CAF50; -fx-text-fill: white;"/>
+    <Button text="Register" onAction="#onRegisterButtonClick" style="-fx-background-color: #008CBA; -fx-text-fill: white;"/>
+
+    <Label fx:id="messageLabel" style="-fx-text-fill: red;"/>
 </VBox>
+
