--- a/src/main/resources/org/example/jobportal/hello-view.fxml
+++ b/src/main/resources/org/example/jobportal/hello-view.fxml
@@ -45,4 +45,7 @@
                 style="-fx-background-color: transparent; -fx-text-fill: #007BFF; -fx-underline: true;" />
     </VBox>
 
+    <VBox fx:id="helloVBox" spacing="15" alignment="CENTER" visible="false">
+        <Label fx:id="helloLabel" text="Hello, User!" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+    </VBox>
 </VBox>
